syntax = "proto3";
package arkeonetwork.arkdrop.claim;

import "gogoproto/gogo.proto";
import "cosmos/base/v1beta1/coin.proto";

option go_package = "github.com/ArkeoNetwork/arkdrop/x/claim/types";

enum Action {
  option (gogoproto.goproto_enum_prefix) = false;

  ActionVote = 0;
  ActionDelegateStake = 1;
}

enum Chain {
  option (gogoproto.goproto_enum_prefix) = false;

  ARKEO = 0;
  ETHEREUM = 1;
  THORCHAIN = 2;
}

// A Claim Records is the metadata of claim data per address
message ClaimRecord {

  Chain chain = 1;

  // arkeo address of claim user
  string address = 2 [ (gogoproto.moretags) = "yaml:\"address\"" ];

  // total initial claimable amount for the user
  repeated cosmos.base.v1beta1.Coin initial_claimable_amount = 3 [
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins",
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"initial_claimable_amount\""
  ];

  // true if action is completed
  // index of bool in array refers to action enum #
  repeated bool action_completed = 4 [
    (gogoproto.moretags) = "yaml:\"action_completed\"",
    (gogoproto.nullable) = false
  ];
}